--- a/samples/service-contract/appconfig.json
+++ b/samples/service-contract/appconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "Service Contract",
+  "name": "MDM Equipment",
   "provider": "SAP FSM",
   "description": "Sample extension to demo data fetch using a frontend only architecture",   
   "version": "1.0.0", 
